<resources>
    <string name="app_name">IMA Kotlin Basic</string>
    <string name="hello">Hello World!</string>
    <string name="hello3">hello world</string>
    <string name="button_1">button 1</string>
    <string name="button_2">button 2</string>
    <string name="don_t_have_account_register">Don\'t have account ?
        <font fgcolor='#FF5722'>Register</font>
    </string>
    <string name="kalkulator">Kalkulator</string>
    <string name="listview">listview</string>
    <string name="gridview">gridview</string>
    <string name="webview">webview</string>
    <string name="spinner">Spinner</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="list_biasa">listview biasa</string>
    <string name="list_custom">listview custom</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign-in</string>
    <string name="ima_studio">IMA STUDIO</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="mobile_phone">Mobile phone</string>
    <string name="nama_buah">nama_buah</string>

    <string-array name="detailbuah">
        <item>Apokat (KBBI: Avokad), avokad, atau Persea americana ialah tumbuhan penghasil buah meja dengan nama sama.
            Tumbuhan ini berasal dari Meksiko dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan
            Amerika Tengah sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di daerah-daerah tropika
            lainnya di dunia.
        </item>
        <item>Jambu air adalah tumbuhan dalam suku jambu-jambuan atau Myrtaceae yang berasal dari Asia Tenggara. Jambu
            air sebetulnya berbeda dengan jambu semarang (Syzygium samarangense), kerabat dekatnya yang memiliki pohon
            dan buah hampir serupa. Beberapa kultivarnya bahkan sukar dibedakan, sehingga kedua-duanya kerap dinamai
            dengan nama umum jambu air atau jambu saja. Jambu air mudah ditanam dan di budidaya.
        </item>
        <item>Manggis (Garcinia mangostana L.) adalah sejenis pohon hijau abadi dari daerah tropika yang diyakini
            berasal dari Kepulauan Nusantara. Tumbuh hingga mencapai 7 sampai 25 meter. Buahnya juga disebut manggis,
            berwarna merah keunguan ketika matang, meskipun ada pula varian yang kulitnya berwarna merah. Buah manggis
            dalam perdagangan dikenal sebagai "ratu buah", sebagai pasangan durian, si "raja buah". Buah ini mengandung
            mempunyai aktivitas antiinflamasi dan antioksidan. Sehingga di luar negeri buah manggis dikenal sebagai buah
            yang memiliki kadar antioksidan tertinggi di dunia.
        </item>
        <item>Stroberi atau tepatnya stroberi kebun (juga dikenal dengan nama arbei, dari bahasa Belanda aardbei) adalah
            sebuah varietas stroberi yang paling banyak dikenal di dunia. Seperti spesies lain dalam genus Fragaria
            (stroberi), buah ini berada dalam keluarga Rosaceae. Secara umum buah ini bukanlah buah, melainkan buah
            palsu,[1] artinya daging buahnya tidak berasal dari ovari tanaman (achenium) tetapi dari bagian bawah
            hypanthium yang berbentuk mangkok[2] tempat ovari tanaman itu berada
        </item>
        <item>Ceri adalah kelompok tumbuhan maupun buahnya anggota marga Prunus. Ceri tidak mencakup satu jenis saja,
            tetapi ada beberapa, seperti P. cerasus, P. avium, dan P. emarginata.
            Ceri adalah pohon yang sangat disukai di Jepang dan bunganya disebut sakura. Pada awal musim semi, di saat
            bunga ceri bermekaran, orang-orang berpiknik di taman-taman yang ditumbuhi pohon ini. Di Australia ceri
            biasanya matang sekitar waktu Natal, sedangkan di Amerika dan Eropa selatan pada bulan Juni.
        </item>
        <item>Durian adalah nama tumbuhan tropis yang berasal dari wilayah Asia Tenggara, sekaligus nama buahnya yang
            bisa dimakan. Nama ini diambil dari ciri khas kulit buahnya yang keras dan berlekuk-lekuk tajam sehingga
            menyerupai duri. Sebutan populernya adalah "raja dari segala buah" (King of Fruit). Durian adalah buah yang
            kontroversial, meskipun banyak orang yang menyukainya, namun sebagian yang lain malah muak dengan aromanya.
        </item>
        <item>Apel adalah jenis buah-buahan, atau buah yang dihasilkan dari pohon buah apel. Buah apel biasanya berwarna
            merah kulitnya jika masak dan (siap dimakan), namun bisa juga kulitnya berwarna hijau atau kuning. Kulit
            buahnya agak lembek, daging buahnya keras. Buah ini memiliki beberapa biji di dalamnya.
        </item>
    </string-array>
</resources>
