<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:background="@drawable/background3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/ima_studio"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"/>
        </LinearLayout>

    </LinearLayout>

    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
        android:hint=" @string/example_email_com"
        android:drawableLeft="@android:drawable/ic_dialog_email"
        android:drawableTint="@android:color/darker_gray"
        android:layout_margin="20dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
        android:drawableTint="@android:color/darker_gray"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/forgot_password"
            android:textColor="@color/biru"
            android:gravity="right"
            android:textSize="15sp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bglogin"
        android:textColor="@android:color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>

</LinearLayout>